panel added, bug fixed

--- a/frontend/src/app/components/ui/students/headers/headers.component.html
+++ b/frontend/src/app/components/ui/students/headers/headers.component.html
@@ -7,7 +7,7 @@
             <a routerLink="/login">Войти</a>
         </div>
         <div class="btn_app">
-            <a routerLink="/app">Выбрать тесты</a>
+            <a routerLink="/dashboard">Выбрать тесты</a>
         </div>
     </div>
 </nav>
