--- a/frontend/src/app/components/ui/students/tests/tests.component.scss
+++ b/frontend/src/app/components/ui/students/tests/tests.component.scss
@@ -51,48 +51,32 @@ $basicFontSizeTitle: 20px;
 .block_btn {
   display: flex;
   justify-content: space-between;
+  button {
+    font-family: "Vollkorn", serif;
+    letter-spacing: 1px;
+    font-size: $basicFontSize;
+    font-weight: 600;
+    width: 100%;
+    height: 40px;
+    border: none;
+    color: $colorText;
+    border-radius: 5px;
+    color: $theBaseColorOfTheTemplate;
+    cursor: pointer;
+    transition: transform 0.5s;
+    margin: 0px 50px 30px 50px;
+  }
+  button:hover {
+    transform: scale(1.05);
+  }
 }
 
 .answer {
-  font-family: "Vollkorn", serif;
-  letter-spacing: 1px;
-  font-size: $basicFontSize;
-  font-weight: 600;
-  width: 100%;
-  height: 40px;
-  border: none;
-  color: $colorText;
   background-color: $baseColorForTheButton;
-  border-radius: 5px;
-  color: $theBaseColorOfTheTemplate;
-  cursor: pointer;
   box-shadow: 0 2px 4px rgba($color: $baseColorForTheButton, $alpha: 0.2);
-  transition: transform 0.5s;
-  margin: 0px 50px 30px 50px;
-}
-
-.answer:hower {
-  transform: scale(1.05);
 }
 
 .miss {
-  font-family: "Vollkorn", serif;
-  letter-spacing: 1px;
-  font-size: $basicFontSize;
-  font-weight: 600;
-  width: 100%;
-  height: 40px;
-  border: none;
-  color: $colorText;
   background-color: $colorError;
-  border-radius: 5px;
-  color: $theBaseColorOfTheTemplate;
-  cursor: pointer;
   box-shadow: 0 2px 4px rgba($color: $colorError, $alpha: 0.2);
-  transition: transform 0.5s;
-  margin: 0px 50px 30px 50px;
-}
-
-.miss:hower {
-  transform: scale(1.05);
 }
