--- a/frontend/src/app/components/ui/students/dashboard-of-tests-topics/dashboard-of-tests-topics.component.html
+++ b/frontend/src/app/components/ui/students/dashboard-of-tests-topics/dashboard-of-tests-topics.component.html
@@ -1,3 +1,4 @@
+<div>
 <div class="wrapper">
     <a routerLink="/test">
         <div class="block">
@@ -5,7 +6,7 @@
                 <label>Тест номер 1</label>
             </div>
             <div class="additional_information">
-                <span>Сделать группе ВТ-222</span>
+                <span>Комментарий к тесту 1</span>
             </div>
         </div>
     </a>
@@ -15,7 +16,7 @@
                 <label>Тест номер 2</label>
             </div>
             <div class="additional_information">
-                <span>Сделать группе ПВ-222</span>
+                <span>Комментарий к тесту 2</span>
             </div>
         </div>
     </a>
@@ -25,17 +26,17 @@
                 <label>Тест номер 3</label>
             </div>
             <div class="additional_information">
-                <span>Сделать группе ИБ-222</span>
+                <span>Комментарий к тесту 3</span>
             </div>
         </div>
     </a>
     <a routerLink="/test">
         <div class="block">
             <div class="name">
-                <label>Тест номер 3</label>
+                <label>Тест номер 4</label>
             </div>
             <div class="additional_information">
-                <span>Сделать группе ВТ-202</span>
+                <span>СКомментарий к тесту 4</span>
             </div>
         </div>
     </a>
