--- a/frontend/src/app/components/ui/teacher/create-test/create-test.component.html
+++ b/frontend/src/app/components/ui/teacher/create-test/create-test.component.html
@@ -1,21 +1,29 @@
 <div class="form_group">
     <div class="block">
-        <div class="question">
-            <label>Вопрос</label>
+        <div class="title_in_card">
+            <label>Название теста</label>
         </div>
         <div>
-            <textarea type="text" class="form_control" placeholder="Напишите вопрос" ></textarea>
+            <input type="text" class="form_control" placeholder="Напишите название теста" />
         </div>
     </div>
     <div class="block">
-        <div class="right_answer">
-            <label>Правильный ответ к вопросу</label>
+        <div class="comment_in_card">
+            <label>Комментарий к тесту</label>
         </div>
         <div>
-            <input type="text" class="form_control" placeholder="Напишите ответ" />
+            <input type="text" class="form_control" placeholder="Напишите комментарий к тесту" />
         </div>
     </div>
-    <div class="block_btn" >
-        <button type="submit" class="btn">Отправить</button>
+    <div class="block">
+        <div class="comment_in_card">
+            <label>Колличество вопросов</label>
+        </div>
+        <div>
+            <input type="text" class="form_control" placeholder="Напишите колличество вопросов" />
+        </div>
+    </div>
+    <div class="block_btn">
+        <button type="submit" class="btn"><a routerLink="/nextStage">Далее</a></button>
     </div>
 </div>
