Структура проекта была переработана

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -12,5 +12,5 @@
     <div class="block_btn">
         <button type="submit" class="btn" (click)="onSubmit();">Отправить</button>
     </div>
-    <a class="link_register" routerLink="/register">Еще не зарегестрированы?</a>
+    <a class="link_register" routerLink="/auth/register">Еще не зарегестрированы?</a>
 </div>
