--- a/frontend/src/app/layout-students/students-header/students-header.component.html
+++ b/frontend/src/app/layout-students/students-header/students-header.component.html
@@ -1,4 +1,4 @@
-<nav class="nav">
+<nav class="nav" *ngIf="isVisible">
     <div class="image_block">
         <img alt="image" src="/assets/logo.png" />
     </div>
